--- a/index.html
+++ b/index.html
@@ -140,41 +140,15 @@
 
                 <h2 class="portfolio__header">Our Amazing Work</h2>
                 <ul class="portfolio__filters">
-                    <li class="portfolio__filters-item active">All</li>
-                    <li class="portfolio__filters-item">Graphic Design</li>
-                    <li class="portfolio__filters-item">Web Design</li>
-                    <li class="portfolio__filters-item">Landing Pages</li>
-                    <li class="portfolio__filters-item">Wordpress</li>
+
                 </ul>
 
                 <div class="portfolio__gallery">
-                    <div class="portfolio__gallery-item">
-                        <img class="portfolio__gallery-item__image" src="./img/portfolio/section-landing-page/landing-page1.jpg"
-                             alt="landing-page">
-                        <div class="portfolio__gallery-item__description">
-                            <div class="gallery-item__controls">
-                                <a href="#" class="gallery-item__btn">
-                                    <svg>
-                                        <use xlink:href="img/icon-sprite.svg#link"></use>
-                                    </svg>
-                                </a>
-                                <a href="#" class="gallery-item__btn">
-                                    <svg>
-                                        <use xlink:href="img/icon-sprite.svg#square"></use>
-                                    </svg>
-                                </a>
-                            </div>
-                            <p class="gallery-item__title">
-                                creative design
-                            </p>
-                            <p class="gallery-item__category">
-                                Web Design
-                            </p>
-                        </div>
-                    </div>
                 </div>
 
-                <a href="#" class="btn btn-success">
+                <div class="loader"></div>
+
+                <a href="#" class="btn btn-success" id="load-more-button">
                     <svg>
                         <use xlink:href="img/icon-sprite.svg#plus"></use>
                     </svg>
