news, footer, feedback

--- a/index.html
+++ b/index.html
@@ -158,7 +158,243 @@
 
         </div>
     </section>
+    <section class="news">
+        <div class="container">
+            <div class="news__wrapper">
+                <h2 class="news__header">Breaking News</h2>
+                <div class="news__container">
+                    <a href="#" class="news__item">
+                        <div class="news__item-picture">
+                            <div class="news__item-time">
+                                <p>12</p>
+                                <p>Feb</p>
+                            </div>
+                            <img src="./img/news/news_1.png" alt="news">
+                        </div>
+                        <div class="news__item-caption">
+                            <p class="caption__title">
+                                Amazing Blog Post
+                            </p>
+                            <div class="caption__info">
+                                <span class="caption__info-author">By admin</span>
+                                <span class="caption__info-comments">2 comment</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="news__item">
+                        <div class="news__item-picture">
+                            <div class="news__item-time">
+                                <p>12</p>
+                                <p>Feb</p>
+                            </div>
+                            <img src="./img/news/news_2.png" alt="news">
+                        </div>
+                        <div class="news__item-caption">
+                            <p class="caption__title">
+                                Amazing Blog Post
+                            </p>
+                            <div class="caption__info">
+                                <span class="caption__info-author">By admin</span>
+                                <span class="caption__info-comments">2 comment</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="news__item">
+                        <div class="news__item-picture">
+                            <div class="news__item-time">
+                                <p>12</p>
+                                <p>Feb</p>
+                            </div>
+                            <img src="./img/news/news_3.png" alt="news">
+                        </div>
+                        <div class="news__item-caption">
+                            <p class="caption__title">
+                                Amazing Blog Post
+                            </p>
+                            <div class="caption__info">
+                                <span class="caption__info-author">By admin</span>
+                                <span class="caption__info-comments">2 comment</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="news__item">
+                        <div class="news__item-picture">
+                            <div class="news__item-time">
+                                <p>12</p>
+                                <p>Feb</p>
+                            </div>
+                            <img src="./img/news/news_4.png" alt="news">
+                        </div>
+                        <div class="news__item-caption">
+                            <p class="caption__title">
+                                Amazing Blog Post
+                            </p>
+                            <div class="caption__info">
+                                <span class="caption__info-author">By admin</span>
+                                <span class="caption__info-comments">2 comment</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="news__item">
+                        <div class="news__item-picture">
+                            <div class="news__item-time">
+                                <p>12</p>
+                                <p>Feb</p>
+                            </div>
+                            <img src="./img/news/news_5.png" alt="news">
+                        </div>
+                        <div class="news__item-caption">
+                            <p class="caption__title">
+                                Amazing Blog Post
+                            </p>
+                            <div class="caption__info">
+                                <span class="caption__info-author">By admin</span>
+                                <span class="caption__info-comments">2 comment</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="news__item">
+                        <div class="news__item-picture">
+                            <div class="news__item-time">
+                                <p>12</p>
+                                <p>Feb</p>
+                            </div>
+                            <img src="./img/news/news_6.png" alt="news">
+                        </div>
+                        <div class="news__item-caption">
+                            <p class="caption__title">
+                                Amazing Blog Post
+                            </p>
+                            <div class="caption__info">
+                                <span class="caption__info-author">By admin</span>
+                                <span class="caption__info-comments">2 comment</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="news__item">
+                        <div class="news__item-picture">
+                            <div class="news__item-time">
+                                <p>12</p>
+                                <p>Feb</p>
+                            </div>
+                            <img src="./img/news/news_7.png" alt="news">
+                        </div>
+                        <div class="news__item-caption">
+                            <p class="caption__title">
+                                Amazing Blog Post
+                            </p>
+                            <div class="caption__info">
+                                <span class="caption__info-author">By admin</span>
+                                <span class="caption__info-comments">2 comment</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="news__item">
+                        <div class="news__item-picture">
+                            <div class="news__item-time">
+                                <p>12</p>
+                                <p>Feb</p>
+                            </div>
+                            <img src="./img/news/news_8.png" alt="news">
+                        </div>
+                        <div class="news__item-caption">
+                            <p class="caption__title">
+                                Amazing Blog Post
+                            </p>
+                            <div class="caption__info">
+                                <span class="caption__info-author">By admin</span>
+                                <span class="caption__info-comments">2 comment</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="feedback">
+        <div class="container">
+            <div class="feedback__content">
+
+                <h2 class="feedback__header">What People Say About theHam</h2>
+                <svg class="feedback__quotes-icon">
+                    <use xlink:href="img/icon-sprite.svg#quotes"></use>
+                </svg>
+
+                <div class="feedback__item">
+                    <p class="feedback__item-text">
+                        Integer dignissim, augue tempus ultricies luctus, quam dui laoreet sem, non dictum odio nisi
+                        quis massa. Morbi pulvinar odio eget aliquam facilisis. Tempus ultricies luctus, quam dui
+                        laoreet sem, non dictum odio nisi quis massa. Morbi pulvinar odio eget aliquam facilisis.
+                    </p>
+                    <div class="feedback__author">
+                        <p class="feedback__author-name">
+                            Hasan Ali
+                        </p>
+                        <p class="feedback__author-position">
+                            UX Designer
+                        </p>
+                    </div>
+                    <img class="feedback__author-photo" src="./img/feedback/saltynaut.jpg" alt="">
+                </div>
+                <div class="feedback__controls">
+                    <div class="control-left">
+                        <a href="#" class="control-arrow">
+                            <svg>
+                                <use xlink:href="img/icon-sprite.svg#left-arrow"></use>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="control-photos">
+                        <a href="#">
+                            <img class="control-photo-item" src="./img/feedback/saltynaut.jpg" alt="feedback-item-photo" >
+                        </a>
+                        <a href="#">
+                            <img class="control-photo-item" src="./img/feedback/saltynaut.jpg" alt="feedback-item-photo" >
+                        </a>
+                        <a href="#" class="active">
+                            <img class="control-photo-item" src="./img/feedback/saltynaut.jpg" alt="feedback-item-photo" >
+                        </a>
+                        <a href="#">
+                            <img class="control-photo-item" src="./img/feedback/saltynaut.jpg" alt="feedback-item-photo" >
+                        </a>
+                    </div>
+                    <div class="control-right">
+                        <a href="#" class="control-arrow">
+                            <svg>
+                                <use xlink:href="img/icon-sprite.svg#left-arrow"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <section class="gallery">
+        <div class="container">
+            <div class="gallery__wrapper">
+                <h2 class="gallery__header">Gallery of best images</h2>
+                <div class="grid">
+                    <div><img src="https://source.unsplash.com/t3DHojIo-08" alt=""></div>
+                    <div><img src="https://source.unsplash.com/Imc-IoZDMXc" alt=""></div>
+                    <div><img src="https://source.unsplash.com/SOZWHqeXcPQ" alt=""></div>
+                    <div><img src="https://source.unsplash.com/bkdzvgBB7rQ" alt=""></div>
+                    <div><img src="https://source.unsplash.com/Aruugw_rJCM" alt=""></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
+<footer class="footer">
+    <div class="container">
+        <p class="footer__copyright">
+            © Copyright 2015 <a href="#">theHam</a> | All Rights Reserved
+        </p>
+    </div>
+</footer>
+
 <script src="./js/script.js"></script>
+<script src="./js/portfolio.js"></script>
 </body>
 </html>
