--- a/index.html
+++ b/index.html
@@ -328,23 +328,9 @@
                             </svg>
                         </a>
                     </div>
-                    <div class="control-photos">
-                        <a href="#">
-                            <img class="control-photo-item" src="./img/feedback/saltynaut.jpg"
-                                 alt="feedback-item-photo">
-                        </a>
-                        <a href="#">
-                            <img class="control-photo-item" src="./img/feedback/saltynaut.jpg"
-                                 alt="feedback-item-photo">
-                        </a>
-                        <a href="#" class="active">
-                            <img class="control-photo-item" src="./img/feedback/saltynaut.jpg"
-                                 alt="feedback-item-photo">
-                        </a>
-                        <a href="#">
-                            <img class="control-photo-item" src="./img/feedback/saltynaut.jpg"
-                                 alt="feedback-item-photo">
-                        </a>
+                    <div class="control-photos-wrapper">
+                        <div class="control-photos">
+                        </div>
                     </div>
                     <div class="control-right">
                         <a href="#" class="control-arrow">
@@ -401,6 +387,7 @@
 <script src="./node_modules/masonry-layout/dist/masonry.pkgd.min.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/services.js"></script>
+<script src="./js/feedback.js"></script>
 <script src="./js/portfolio.js"></script>
 </body>
 </html>
